--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "postinstall": "npm run lint"
+    "lint": "eslint src/**/*.ts src/**/*.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src/**/*.ts src/**/*.tsx --fix --report-unused-disable-directives --max-warnings 0 ",
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npx prettier src --check --write",
+    "format": "npm run lint:fix && npm run prettier:fix",
+    "prepare": "cd .. && husky frontend/.husky",
+    "postinstall": "npm run format"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
@@ -31,6 +37,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
