--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "postinstall": "npm run format"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
